@@ -53,18 +53,16 @@ public class FloatDict {
    * @nowebref
    */
   public FloatDict(BufferedReader reader) {
-//  public FloatHash(PApplet parent, String filename) {
     String[] lines = PApplet.loadStrings(reader);
     keys = new String[lines.length];
     values = new float[lines.length];
 
-//    boolean csv = (lines[0].indexOf('\t') == -1);
     for (int i = 0; i < lines.length; i++) {
-//      String[] pieces = csv ? Table.splitLineCSV(lines[i]) : PApplet.split(lines[i], '\t');
       String[] pieces = PApplet.split(lines[i], '\t');
       if (pieces.length == 2) {
         keys[count] = pieces[0];
         values[count] = PApplet.parseFloat(pieces[1]);
+        indices.put(pieces[0], count);
         count++;
       }
     }
@@ -278,7 +276,18 @@ public class FloatDict {
    */
   public float get(String key) {
     int index = index(key);
-    if (index == -1) return 0;
+    if (index == -1) {
+      throw new IllegalArgumentException("No key named '" + key + "'");
+    }
+    return values[index];
+  }
+
+
+  public float get(String key, float alternate) {
+    int index = index(key);
+    if (index == -1) {
+      return alternate;
+    }
     return values[index];
   }
 
@@ -413,13 +422,21 @@ public class FloatDict {
 
   public String minKey() {
     checkMinMax("minKey");
-    return keys[minIndex()];
+    int index = minIndex();
+    if (index == -1) {
+      return null;
+    }
+    return keys[index];
   }
 
 
   public float minValue() {
     checkMinMax("minValue");
-    return values[minIndex()];
+    int index = minIndex();
+    if (index == -1) {
+      return Float.NaN;
+    }
+    return values[index];
   }
 
 
@@ -454,17 +471,25 @@ public class FloatDict {
   }
 
 
-  /** The key for a max value. */
+  /** The key for a max value, or null if everything is NaN (no max). */
   public String maxKey() {
     checkMinMax("maxKey");
-    return keys[maxIndex()];
+    int index = maxIndex();
+    if (index == -1) {
+      return null;
+    }
+    return keys[index];
   }
 
 
-  /** The max value. */
+  /** The max value. (Or NaN if they're all NaN.) */
   public float maxValue() {
     checkMinMax("maxValue");
-    return values[maxIndex()];
+    int index = maxIndex();
+    if (index == -1) {
+      return Float.NaN;
+    }
+    return values[index];
   }
 
 
@@ -479,7 +504,7 @@ public class FloatDict {
       keys = PApplet.expand(keys);
       values = PApplet.expand(values);
     }
-    indices.put(what, new Integer(count));
+    indices.put(what, Integer.valueOf(count));
     keys[count] = what;
     values[count] = much;
     count++;
@@ -526,8 +551,8 @@ public class FloatDict {
     keys[b] = tkey;
     values[b] = tvalue;
 
-    indices.put(keys[a], new Integer(a));
-    indices.put(keys[b], new Integer(b));
+    indices.put(keys[a], Integer.valueOf(a));
+    indices.put(keys[b], Integer.valueOf(b));
   }
 
 
@@ -654,7 +679,28 @@ public class FloatDict {
     Sort s = new Sort() {
       @Override
       public int size() {
-        return count;
+        if (useKeys) {
+          return count;  // don't worry about NaN values
+
+        } else if (count == 0) {  // skip the NaN check, it'll AIOOBE
+          return 0;
+
+        } else {  // first move NaN values to the end of the list
+          int right = count - 1;
+          while (values[right] != values[right]) {
+            right--;
+            if (right == -1) {
+              return 0;  // all values are NaN
+            }
+          }
+          for (int i = right; i >= 0; --i) {
+            if (Float.isNaN(values[i])) {
+              swap(i, right);
+              --right;
+            }
+          }
+          return right + 1;
+        }
       }
 
       @Override
@@ -715,12 +761,11 @@ public class FloatDict {
   }
 
 
-//  /**
-//   * Write tab-delimited entries out to the console.
-//   */
-//  public void print() {
-//    write(new PrintWriter(System.out));
-//  }
+  public void print() {
+    for (int i = 0; i < size(); i++) {
+      System.out.println(keys[i] + " = " + values[i]);
+    }
+  }
 
 
   /**
